// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Kafka API fetch: fetch on empty partition 1`] = `"AAAAKgAAAAAAAAABAAp0ZXN0LXRvcGljAAAAAQAAAAAABwAAAAAAAAAAAAAAAA=="`;

exports[`Kafka API fetch: fetch on empty partition 2`] = `
Object {
  "topics": Array [
    Object {
      "name": "test-topic",
      "partitions": Array [
        Object {
          "errorCode": 7,
          "highWatermark": 0n,
          "index": 0,
          "messageSet": Uint8Array [],
        },
      ],
    },
  ],
}
`;

exports[`Kafka API listOffsets: full offset list after producing records 1`] = `"AAAAJgAAAAAAAAABAAp0ZXN0LXRvcGljAAAAAQAAAAAAAAAAAAAAAAAA"`;

exports[`Kafka API listOffsets: full offset list after producing records 2`] = `
Object {
  "topics": Array [
    Object {
      "name": "test-topic",
      "partitions": Array [
        Object {
          "baseOffset": 0n,
          "errorCode": 0,
          "index": 0,
        },
      ],
    },
  ],
}
`;

exports[`Kafka API listOffsets: full offset list after producing records 3`] = `"AAAAegAAAAEAAAABAAp0ZXN0LXRvcGljAAAAAQAAAAAAAAAAAAsAAAAAAAAACgAAAAAAAAAJAAAAAAAAAAgAAAAAAAAABwAAAAAAAAAGAAAAAAAAAAUAAAAAAAAABAAAAAAAAAADAAAAAAAAAAIAAAAAAAAAAQAAAAAAAAAA"`;

exports[`Kafka API listOffsets: full offset list after producing records 4`] = `
Object {
  "topics": Array [
    Object {
      "name": "test-topic",
      "partitions": Array [
        Object {
          "errorCode": 0,
          "index": 0,
          "oldStyleOffsets": Array [
            10n,
            9n,
            8n,
            7n,
            6n,
            5n,
            4n,
            3n,
            2n,
            1n,
            0n,
          ],
        },
      ],
    },
  ],
}
`;

exports[`Kafka API listOffsets: initial offsets 1`] = `"AAAAKgAAAAAAAAABAAp0ZXN0LXRvcGljAAAAAQAAAAAAAAAAAAEAAAAAAAAAAA=="`;

exports[`Kafka API listOffsets: initial offsets 2`] = `
Object {
  "topics": Array [
    Object {
      "name": "test-topic",
      "partitions": Array [
        Object {
          "errorCode": 0,
          "index": 0,
          "oldStyleOffsets": Array [
            0n,
          ],
        },
      ],
    },
  ],
}
`;

exports[`Kafka API listOffsets: maximum number of offsets is respected 1`] = `"AAAAJgAAAAAAAAABAAp0ZXN0LXRvcGljAAAAAQAAAAAAAAAAAAAAAAAA"`;

exports[`Kafka API listOffsets: maximum number of offsets is respected 2`] = `
Object {
  "topics": Array [
    Object {
      "name": "test-topic",
      "partitions": Array [
        Object {
          "baseOffset": 0n,
          "errorCode": 0,
          "index": 0,
        },
      ],
    },
  ],
}
`;

exports[`Kafka API listOffsets: maximum number of offsets is respected 3`] = `"AAAAQgAAAAEAAAABAAp0ZXN0LXRvcGljAAAAAQAAAAAAAAAAAAQAAAAAAAAACgAAAAAAAAAJAAAAAAAAAAgAAAAAAAAABw=="`;

exports[`Kafka API listOffsets: maximum number of offsets is respected 4`] = `
Object {
  "topics": Array [
    Object {
      "name": "test-topic",
      "partitions": Array [
        Object {
          "errorCode": 0,
          "index": 0,
          "oldStyleOffsets": Array [
            10n,
            9n,
            8n,
            7n,
          ],
        },
      ],
    },
  ],
}
`;

exports[`Kafka API listOffsets: oldest offset after producing records 1`] = `"AAAAJgAAAAAAAAABAAp0ZXN0LXRvcGljAAAAAQAAAAAAAAAAAAAAAAAA"`;

exports[`Kafka API listOffsets: oldest offset after producing records 2`] = `
Object {
  "topics": Array [
    Object {
      "name": "test-topic",
      "partitions": Array [
        Object {
          "baseOffset": 0n,
          "errorCode": 0,
          "index": 0,
        },
      ],
    },
  ],
}
`;

exports[`Kafka API listOffsets: oldest offset after producing records 3`] = `"AAAAKgAAAAEAAAABAAp0ZXN0LXRvcGljAAAAAQAAAAAAAAAAAAEAAAAAAAAAAA=="`;

exports[`Kafka API listOffsets: oldest offset after producing records 4`] = `
Object {
  "topics": Array [
    Object {
      "name": "test-topic",
      "partitions": Array [
        Object {
          "errorCode": 0,
          "index": 0,
          "oldStyleOffsets": Array [
            0n,
          ],
        },
      ],
    },
  ],
}
`;

exports[`Kafka API metadata: fetch all topics 1`] = `"AAAAQwAAAAUAAAABAAABTQAJbG9jYWxob3N0AAAiUwAAAAEAAAAKdGVzdC10b3BpYwAAAAEAAAAAAAAAAAFNAAAAAAAAAAA="`;

exports[`Kafka API metadata: fetch all topics 2`] = `
Object {
  "brokers": Array [
    Object {
      "host": "localhost",
      "nodeId": 333,
      "port": 8787,
    },
  ],
  "topics": Array [
    Object {
      "errorCode": 0,
      "name": "test-topic",
      "partitions": Array [
        Object {
          "errorCode": 0,
          "isrNodes": Array [],
          "leaderId": 333,
          "partitionIndex": 0,
          "replicaNodes": Array [],
        },
      ],
    },
  ],
}
`;

exports[`Kafka API metadata: fetch nonexistent topic 1`] = `"AAAAMgAAAAUAAAABAAABTQAJbG9jYWxob3N0AAAiUwAAAAEAAwALb3RoZXItdG9waWMAAAAA"`;

exports[`Kafka API metadata: fetch nonexistent topic 2`] = `
Object {
  "brokers": Array [
    Object {
      "host": "localhost",
      "nodeId": 333,
      "port": 8787,
    },
  ],
  "topics": Array [
    Object {
      "errorCode": 3,
      "name": "other-topic",
      "partitions": Array [],
    },
  ],
}
`;

exports[`Kafka API metadata: fetch specific topic 1`] = `"AAAAQwAAAAUAAAABAAABTQAJbG9jYWxob3N0AAAiUwAAAAEAAAAKdGVzdC10b3BpYwAAAAEAAAAAAAAAAAFNAAAAAAAAAAA="`;

exports[`Kafka API metadata: fetch specific topic 2`] = `
Object {
  "brokers": Array [
    Object {
      "host": "localhost",
      "nodeId": 333,
      "port": 8787,
    },
  ],
  "topics": Array [
    Object {
      "errorCode": 0,
      "name": "test-topic",
      "partitions": Array [
        Object {
          "errorCode": 0,
          "isrNodes": Array [],
          "leaderId": 333,
          "partitionIndex": 0,
          "replicaNodes": Array [],
        },
      ],
    },
  ],
}
`;

exports[`Kafka API metadata: fetch specific topic and nonexistent topic 1`] = `"AAAAVgAAAAUAAAABAAABTQAJbG9jYWxob3N0AAAiUwAAAAIAAAAKdGVzdC10b3BpYwAAAAEAAAAAAAAAAAFNAAAAAAAAAAAAAwALb3RoZXItdG9waWMAAAAA"`;

exports[`Kafka API metadata: fetch specific topic and nonexistent topic 2`] = `
Object {
  "brokers": Array [
    Object {
      "host": "localhost",
      "nodeId": 333,
      "port": 8787,
    },
  ],
  "topics": Array [
    Object {
      "errorCode": 0,
      "name": "test-topic",
      "partitions": Array [
        Object {
          "errorCode": 0,
          "isrNodes": Array [],
          "leaderId": 333,
          "partitionIndex": 0,
          "replicaNodes": Array [],
        },
      ],
    },
    Object {
      "errorCode": 3,
      "name": "other-topic",
      "partitions": Array [],
    },
  ],
}
`;

exports[`Kafka API produce: send multiple message batches to one partition 1`] = `"AAAAJwAAAAUAAAABAAtvdGhlci10b3BpYwAAAAEAAAPnAAAAAAAAAAAAAA=="`;

exports[`Kafka API produce: send multiple message batches to one partition 2`] = `
Object {
  "topics": Array [
    Object {
      "name": "other-topic",
      "partitions": Array [
        Object {
          "baseOffset": 0n,
          "errorCode": 0,
          "index": 999,
        },
      ],
    },
  ],
}
`;

exports[`Kafka API produce: send multiple message batches to one partition 3`] = `"AAAAJwAAAAYAAAABAAtvdGhlci10b3BpYwAAAAEAAAPnAAAAAAAAAAAAAw=="`;

exports[`Kafka API produce: send multiple message batches to one partition 4`] = `
Object {
  "topics": Array [
    Object {
      "name": "other-topic",
      "partitions": Array [
        Object {
          "baseOffset": 3n,
          "errorCode": 0,
          "index": 999,
        },
      ],
    },
  ],
}
`;

exports[`Kafka API produce: send one message to one partition 1`] = `"AAAAJgAAAAUAAAABAAp0ZXN0LXRvcGljAAAAAQAAAU0AAAAAAAAAAAAA"`;

exports[`Kafka API produce: send one message to one partition 2`] = `
Object {
  "topics": Array [
    Object {
      "name": "test-topic",
      "partitions": Array [
        Object {
          "baseOffset": 0n,
          "errorCode": 0,
          "index": 333,
        },
      ],
    },
  ],
}
`;
